# birb

./: .gitignore  borb.sh  borbConfig.json  conf.toml  deploy.py  deps  polly  pyproject.toml  pyrightconfig.json  say  say_clip.ahk  test_borb.py
borb/: Sound.py  Text.py  borb.py  cache.py  conf.py  easyLog.py  funtools.py  happyUuid.py  say_clip.ahk  sayclip.py  segment.py  speech.py  test_2_segment_speech.py
borb/test/: __init__.py  test_borb.py  test_normalize.py  test_segment.py
config/: borbConfig.brian.json
src/: borb.py  cache.py  conf.py  polly.py  sayclip.py  sound.py  test.py  text.py
